--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
 <!-- 	for the moving text -->
 	<marquee>
-		<h1>Welcome to acciojobs!</h1>
+		<h1>Welcome to Accio jobs!</h1>
 	</marquee>
 	<a href="https://acciojob.com/blog/" target ="_blanks">
 		<b><h1> Blog </h1></b>
